# Joint_Comma_and_Kasreh_Recognizer

./: LICENSE  README.md  configs.py  inference.py  joint_kasre_comma_recognizer.py  pyproject.toml  requirements.txt  setup.cfg  train.py
Joint_kasreh_comma/: configs.py  download_models.py  joint_kasre_comma_recognizer.py
Joint_kasreh_comma/data_loader/: loader.py
Joint_kasreh_comma/models/: Joint_BERT_BiLSTM.py
Joint_kasreh_comma/utils/: data_preprocessing.py  inference_utils.py  training_utils.py
data_loader/: loader.py
models/: BERT_BiLSTM.py
utils/: inference_utils.py  training_utils.py
