#Copyright 2022 Hamidreza Sadeghi. All rights reserved.
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.


[metadata]
name = Joint_kasreh_comma
version = 1.0.0
author = Hamidreza Sadeghi
author_email = sadeghi.hamidreza1400@gmail.com
description = In this project, we provide a joint neural model based on BERT and BiLSTM neural networks, which can recognize the Kasreh Ezafeh (Genitive Conjunction /e/) and the Comma in a Persian sentence or text.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HRSadeghi/Joint_Comma_and_Kasreh_Recognizer.git
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    torch
    torchmetrics==0.9.3
    transformers==4.21.1
